--- a/house_prediction.ipynb
+++ b/house_prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "2  3364799.814  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "4    Gombe  Semi-detached duplex        5         6              1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "4  2600700.898  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "(20000, 6)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        "4  2600700.898  North Central  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "4  2600700.898  North Central             NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "4         6.0  2600700.898  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,14 +912,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "loc               1813\n",
-       "title             1722\n",
        "bedroom           1799\n",
        "bathroom          1805\n",
        "parking_space     1811\n",
@@ -930,7 +929,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1005,14 +1004,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "loc               12.950000\n",
-       "title             12.300000\n",
        "bedroom           12.850000\n",
        "bathroom          12.892857\n",
        "parking_space     12.935714\n",
@@ -1023,7 +1021,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,6 +1043,34 @@
     "\n",
     "df_train = pd.DataFrame(imp_mode.transform(df_train), columns=df.columns)\n",
     "df_test = pd.DataFrame(imp_mode.transform(df_test), columns=df.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loc               object\n",
+       "bedroom           object\n",
+       "bathroom          object\n",
+       "parking_space     object\n",
+       "region            object\n",
+       "bed_bath_ratio    object\n",
+       "title_rank        object\n",
+       "price             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.dtypes"
    ]
   },
   {
