feat: optuna tune catboost with first place preprocessing

--- a/notebooks/house_prediction_optuna.ipynb
+++ b/notebooks/house_prediction_optuna.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../scripts')\n",
+    "\n",
     "from pprint import pprint\n",
     "\n",
     "import pandas as pd\n",
@@ -13,11 +16,11 @@
     "import optuna \n",
     "\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import lightgbm as lgbm\n",
     "\n",
-    "from scripts.preprocess import preprocess\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from scripts.model import fold_fit_score\n",
+    "from preprocess import preprocess\n",
+    "from model import fold_fit_score\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,9 +48,9 @@
    ],
    "source": [
     "X, y, X_test = preprocess(\n",
-    "    \"data/Housing_dataset_train.csv\",\n",
-    "    \"data/Housing_dataset_test.csv\",\n",
-    "    \"state_to_region.json\",\n",
+    "    \"../data/Housing_dataset_train.csv\",\n",
+    "    \"../data/Housing_dataset_test.csv\",\n",
+    "    \"../json/state_to_region.json\",\n",
     ")\n",
     "\n",
     "print(X.shape, y.shape, X_test.shape)"
@@ -785,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
