--- a/notebooks/zindi_first_place_notebook.ipynb
+++ b/notebooks/zindi_first_place_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -30,18 +30,17 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import numpy as np  # linear algebra\n",
+    "import pandas as pd  # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "import warnings\n",
     "\n",
     "# Ignore all warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,20 +219,20 @@
        "[14000 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv(\"data/Housing_dataset_train.csv\")\n",
-    "test = pd.read_csv(\"data/Housing_dataset_test.csv\")\n",
+    "train = pd.read_csv(\"../data/Housing_dataset_train.csv\")\n",
+    "test = pd.read_csv(\"../data/Housing_dataset_test.csv\")\n",
     "train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-03T23:24:27.613613Z",
@@ -432,7 +431,7 @@
        "[20000 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-03T23:24:31.828637Z",
@@ -656,7 +655,7 @@
        "[16531 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-03T23:24:35.138208Z",
@@ -686,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-03T23:25:12.467920Z",
@@ -704,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-03T23:25:14.878574Z",
@@ -723,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +739,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-03T23:25:49.020552Z",
@@ -791,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +930,7 @@
        "5  1341750.867    1         0           1          4.0   8.0             32.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,6 +938,168 @@
    "source": [
     "combined_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>loc</th>\n",
+       "      <th>title</th>\n",
+       "      <th>bedroom</th>\n",
+       "      <th>bathroom</th>\n",
+       "      <th>parking_space</th>\n",
+       "      <th>price</th>\n",
+       "      <th>ind</th>\n",
+       "      <th>is_lagos</th>\n",
+       "      <th>is_mansion</th>\n",
+       "      <th>comfort_ind</th>\n",
+       "      <th>size</th>\n",
+       "      <th>comfort_by_size</th>\n",
+       "      <th>population_density_level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3583</td>\n",
+       "      <td>Katsina</td>\n",
+       "      <td>Semi-detached duplex</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1149999.565</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2748</td>\n",
+       "      <td>Ondo</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1672416.689</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2224</td>\n",
+       "      <td>Anambra</td>\n",
+       "      <td>Detached duplex</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2410306.756</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>27.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10300</td>\n",
+       "      <td>Kogi</td>\n",
+       "      <td>Terrace duplex</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2600700.898</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1733</td>\n",
+       "      <td>Borno</td>\n",
+       "      <td>Mansion</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1341750.867</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID      loc                 title  bedroom  bathroom  parking_space  \\\n",
+       "0   3583  Katsina  Semi-detached duplex      2.0       2.0            1.0   \n",
+       "1   2748     Ondo             Apartment      4.0       2.0            4.0   \n",
+       "3   2224  Anambra       Detached duplex      5.0       2.0            4.0   \n",
+       "4  10300     Kogi        Terrace duplex      4.0       5.0            6.0   \n",
+       "5   1733    Borno               Mansion      4.0       1.0            3.0   \n",
+       "\n",
+       "         price  ind  is_lagos  is_mansion  comfort_ind  size  comfort_by_size  \\\n",
+       "0  1149999.565    1         0           0          1.0   5.0              5.0   \n",
+       "1  1672416.689    1         0           0          2.0  10.0             20.0   \n",
+       "3  2410306.756    1         0           0          2.5  11.0             27.5   \n",
+       "4  2600700.898    1         0           0          0.8  15.0             12.0   \n",
+       "5  1341750.867    1         0           1          4.0   8.0             32.0   \n",
+       "\n",
+       "   population_density_level  \n",
+       "0                         4  \n",
+       "1                         4  \n",
+       "3                         1  \n",
+       "4                         8  \n",
+       "5                        10  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1242,6 +1403,7 @@
     "population_level_8 = [\"Kebbi\", \"Kogi\", \"Zamfara\"]\n",
     "population_level_9 = [\"Adamawa\", \"Benue\", \"Kwara\", \"Nasarawa\"]\n",
     "population_level_10 = [\"Borno\", \"Niger\", \"Taraba\", \"Yobe\"]\n",
+    "\n",
     "\n",
     "combined_df[\"population_density_level\"] = combined_df[\"loc\"].apply(\n",
     "    lambda x: 10\n",
