--- a/notebooks/house_prediction_load_optuna.ipynb
+++ b/notebooks/house_prediction_load_optuna.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +11,15 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append('../scripts')\n",
+    "\n",
     "from pprint import pprint\n",
     "\n",
     "import pandas as pd\n",
@@ -24,11 +27,11 @@
     "import optuna \n",
     "\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import lightgbm as lgbm\n",
     "\n",
-    "from scripts.preprocess import preprocess\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from scripts.model import fold_fit_score\n",
+    "from preprocess import preprocess\n",
+    "from model import fold_fit_score\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,9 +66,9 @@
    ],
    "source": [
     "X, y, X_test = preprocess(\n",
-    "    \"data/Housing_dataset_train.csv\",\n",
-    "    \"data/Housing_dataset_test.csv\",\n",
-    "    \"state_to_region.json\",\n",
+    "    \"../data/Housing_dataset_train.csv\",\n",
+    "    \"../data/Housing_dataset_test.csv\",\n",
+    "    \"../json/state_to_region.json\",\n",
     ")\n",
     "\n",
     "print(X.shape, y.shape, X_test.shape)"
@@ -297,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
