--- a/notebooks/zindi_preprocess.ipynb
+++ b/notebooks/zindi_preprocess.ipynb
@@ -2,166 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "\n",
+    "sys.path.append('../scripts')\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import category_encoders as ce\n",
-    "import warnings\n",
-    "\n",
-    "# Ignore all warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "\n",
-    "def preprocess(train_data_path: str, test_data_path: str):\n",
-    "    df_train = pd.read_csv(train_data_path)\n",
-    "    df_test = pd.read_csv(test_data_path)\n",
-    "\n",
-    "    # create a new index column in df_train and df_test\n",
-    "    df_train['ind'] = 1\n",
-    "    df_test['ind'] = 0 \n",
-    "\n",
-    "    # Concatenate train and test DataFrames\n",
-    "    combined_df = pd.concat([df_train, df_test])\n",
-    "\n",
-    "    # drop location and title column from combined_df\n",
-    "    combined_df.dropna(subset=['loc','title'],inplace=True)\n",
-    "\n",
-    "    # fill null values in combined_df\n",
-    "    median_bedroom = combined_df['bedroom'].median()\n",
-    "    combined_df['bedroom'].fillna(median_bedroom, inplace=True)\n",
-    "\n",
-    "    median_bathroom = combined_df['bathroom'].median()\n",
-    "    combined_df['bathroom'].fillna(median_bathroom, inplace=True)\n",
-    "\n",
-    "    median_parking_space = combined_df['parking_space'].median()\n",
-    "    combined_df['parking_space'].fillna(median_parking_space, inplace=True)\n",
-    "\n",
-    "    # feature engineering\n",
-    "\n",
-    "    combined_df[\"is_lagos\"] = combined_df[\"loc\"].apply(lambda x: 1 if x == \"Lagos\" else 0)\n",
-    "\n",
-    "    combined_df[\"is_mansion\"] = combined_df[\"title\"].apply(\n",
-    "    lambda x: 1 if x == \"Mansion\" else 0\n",
-    "    )\n",
-    "\n",
-    "    combined_df[\"comfort_ind\"] = combined_df[\"bedroom\"] / combined_df[\"bathroom\"]\n",
-    "\n",
-    "    combined_df[\"size\"] = (\n",
-    "    combined_df[\"bedroom\"] + combined_df[\"bathroom\"] + combined_df[\"parking_space\"]\n",
-    "    )\n",
-    "\n",
-    "    combined_df[\"comfort_by_size\"] = combined_df[\"comfort_ind\"] * combined_df[\"size\"]\n",
-    "\n",
-    "    population_level_1 = [\"Anambra\", \"Enugu\", \"Imo\", \"Lagos\"]\n",
-    "    population_level_2 = [\"Abia\", \"Kano\", \"Rivers\"]\n",
-    "    population_level_3 = [\"Akwa Ibom\", \"Ebonyi\", \"Ekiti\", \"Osun\"]\n",
-    "    population_level_4 = [\"Katsina\", \"Ogun\", \"Ondo\"]\n",
-    "    population_level_5 = [\"Bauchi\", \"Delta\", \"Jigawa\", \"Oyo\"]\n",
-    "    population_level_6 = [\"Bayelsa\", \"Edo\", \"Gombe\"]\n",
-    "    population_level_7 = [\"Cross River\", \"Kaduna\", \"Plateau\", \"Sokoto\"]\n",
-    "    population_level_8 = [\"Kebbi\", \"Kogi\", \"Zamfara\"]\n",
-    "    population_level_9 = [\"Adamawa\", \"Benue\", \"Kwara\", \"Nasarawa\"]\n",
-    "    population_level_10 = [\"Borno\", \"Niger\", \"Taraba\", \"Yobe\"]\n",
-    "\n",
-    "    combined_df[\"population_density_level\"] = combined_df[\"loc\"].apply(\n",
-    "        lambda x: 10\n",
-    "        if x in population_level_1\n",
-    "        else 9\n",
-    "        if x in population_level_2\n",
-    "        else 8\n",
-    "        if x in population_level_3\n",
-    "        else 7\n",
-    "        if x in population_level_4\n",
-    "        else 6\n",
-    "        if x in population_level_5\n",
-    "        else 5\n",
-    "        if x in population_level_6\n",
-    "        else 4\n",
-    "        if x in population_level_7\n",
-    "        else 3\n",
-    "        if x in population_level_8\n",
-    "        else 2\n",
-    "        if x in population_level_9\n",
-    "        else 1\n",
-    "        if x in population_level_10\n",
-    "        else 0\n",
-    "    )\n",
-    "\n",
-    "    # Create a new DataFrame to store the encoded values\n",
-    "    encoded_df = combined_df.copy()\n",
-    "\n",
-    "    # Define the encoder instance\n",
-    "    encoder = ce.TargetEncoder(cols=['loc'])\n",
-    "\n",
-    "    # Fit the encoder on the 'loc' column and 'price' target variable\n",
-    "    encoder.fit(encoded_df['loc'], encoded_df['price'])\n",
-    "\n",
-    "    # Transform the 'loc' column with the encoded values\n",
-    "    encoded_df['loc_encoded'] = encoder.transform(encoded_df['loc'])\n",
-    "\n",
-    "\n",
-    "    encoded_df['loc_encoded'] = round((encoded_df['loc_encoded']/10_000_000),2)\n",
-    "    # Drop the original 'loc' column if you no longer need it\n",
-    "    encoded_df.drop('loc', axis=1, inplace=True)\n",
-    "\n",
-    "\n",
-    "    # Calculate the average price for each title\n",
-    "    title_average_price = combined_df.groupby(\"title\")[\"price\"].mean()\n",
-    "\n",
-    "    # Create a new DataFrame to store the title and its corresponding average price\n",
-    "    title_avg_price_df = pd.DataFrame(\n",
-    "        {\"title\": title_average_price.index, \"avg_price\": title_average_price.values}\n",
-    "    )\n",
-    "\n",
-    "    # Sort the DataFrame by the average price in ascending order\n",
-    "    title_avg_price_df.sort_values(by=\"avg_price\", inplace=True)\n",
-    "\n",
-    "    # Create a new column 'title_rank' with the rank based on average price\n",
-    "    title_avg_price_df[\"title_rank\"] = range(1, len(title_avg_price_df) + 1)\n",
-    "\n",
-    "    # Merge the 'title_rank' column back to the original DataFrame based on 'title' column\n",
-    "    encoded_df = pd.merge(\n",
-    "        encoded_df, title_avg_price_df[[\"title\", \"title_rank\"]], on=\"title\", how=\"left\"\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "    # Drop the 'title_rank' column if you no longer need it\n",
-    "    encoded_df.drop(\"title\", axis=1, inplace=True)\n",
-    "\n",
-    "    combined_df = encoded_df.copy()\n",
-    "\n",
-    "    train = combined_df[combined_df.ind == 1]\n",
-    "    test = combined_df[combined_df.ind == 0]\n",
-    "\n",
-    "    train.drop('ind',axis=1,inplace=True)\n",
-    "    test.drop(['ind','price'],axis=1,inplace=True)\n",
-    "\n",
-    "    X = train.drop(['ID','price'],axis=1)\n",
-    "    y = train.price\n",
-    "\n",
-    "\n",
-    "    return X, y\n",
-    "\n",
-    "\n"
+    "from first_preprocess import first_preprocess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = preprocess(\"data/Housing_dataset_train.csv\", \"data/Housing_dataset_test.csv\")\n"
+    "X, y = first_preprocess(\n",
+    "    \"../data/Housing_dataset_train.csv\",\n",
+    "    \"../data/Housing_dataset_test.csv\",\n",
+    "    \"../json/population_density.json\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +76,7 @@
        "      <td>1.000000</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.000000</td>\n",
-       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.20</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -223,7 +90,7 @@
        "      <td>2.000000</td>\n",
        "      <td>10.0</td>\n",
        "      <td>20.000000</td>\n",
-       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.23</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -237,7 +104,7 @@
        "      <td>2.500000</td>\n",
        "      <td>11.0</td>\n",
        "      <td>27.500000</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.24</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -251,7 +118,7 @@
        "      <td>0.800000</td>\n",
        "      <td>15.0</td>\n",
        "      <td>12.000000</td>\n",
-       "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "      <td>0.18</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
@@ -265,7 +132,7 @@
        "      <td>4.000000</td>\n",
        "      <td>8.0</td>\n",
        "      <td>32.000000</td>\n",
-       "      <td>1</td>\n",
+       "      <td>10</td>\n",
        "      <td>0.17</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
@@ -293,7 +160,7 @@
        "      <td>8.000000</td>\n",
        "      <td>15.0</td>\n",
        "      <td>120.000000</td>\n",
-       "      <td>1</td>\n",
+       "      <td>10</td>\n",
        "      <td>0.19</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -307,7 +174,7 @@
        "      <td>0.571429</td>\n",
        "      <td>14.0</td>\n",
        "      <td>8.000000</td>\n",
-       "      <td>5</td>\n",
+       "      <td>6</td>\n",
        "      <td>0.23</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -321,7 +188,7 @@
        "      <td>0.571429</td>\n",
        "      <td>16.0</td>\n",
        "      <td>9.142857</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7</td>\n",
        "      <td>0.19</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -335,7 +202,7 @@
        "      <td>1.333333</td>\n",
        "      <td>19.0</td>\n",
        "      <td>25.333333</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7</td>\n",
        "      <td>0.19</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -349,7 +216,7 @@
        "      <td>0.666667</td>\n",
        "      <td>11.0</td>\n",
        "      <td>7.333333</td>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.27</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -373,17 +240,17 @@
        "10530      4.0       6.0            1.0         0           0     0.666667   \n",
        "\n",
        "       size  comfort_by_size  population_density_level  loc_encoded  \\\n",
-       "0       5.0         5.000000                         7         0.20   \n",
-       "1      10.0        20.000000                         7         0.23   \n",
-       "2      11.0        27.500000                        10         0.24   \n",
-       "3      15.0        12.000000                         3         0.18   \n",
-       "4       8.0        32.000000                         1         0.17   \n",
+       "0       5.0         5.000000                         4         0.20   \n",
+       "1      10.0        20.000000                         4         0.23   \n",
+       "2      11.0        27.500000                         1         0.24   \n",
+       "3      15.0        12.000000                         8         0.18   \n",
+       "4       8.0        32.000000                        10         0.17   \n",
        "...     ...              ...                       ...          ...   \n",
-       "10526  15.0       120.000000                         1         0.19   \n",
-       "10527  14.0         8.000000                         5         0.23   \n",
-       "10528  16.0         9.142857                         4         0.19   \n",
-       "10529  19.0        25.333333                         4         0.19   \n",
-       "10530  11.0         7.333333                         6         0.27   \n",
+       "10526  15.0       120.000000                        10         0.19   \n",
+       "10527  14.0         8.000000                         6         0.23   \n",
+       "10528  16.0         9.142857                         7         0.19   \n",
+       "10529  19.0        25.333333                         7         0.19   \n",
+       "10530  11.0         7.333333                         5         0.27   \n",
        "\n",
        "       title_rank  \n",
        "0               5  \n",
@@ -401,7 +268,7 @@
        "[10531 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
