--- a/notebooks/house_prediction_load_optuna.ipynb
+++ b/notebooks/house_prediction_load_optuna.ipynb
@@ -508,11 +508,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Datapreprocessing  first_preprocessing lgbm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X, y, X_test = first_preprocess(\n",
+    "    \"../data/Housing_dataset_train.csv\",\n",
+    "    \"../data/Housing_dataset_test.csv\",\n",
+    "    \"../json/population_density.json\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_USER = os.getenv(\"DB_USER\")\n",
+    "DB_PASSWORD = os.getenv(\"DB_PASSWORD\")\n",
+    "DB_PORT = os.getenv(\"DB_PORT\")\n",
+    "DB_NAME = os.getenv(\"DB_NAME\")\n",
+    "\n",
+    "\n",
+    "DB_URI = f\"postgresql://{DB_USER}:{DB_PASSWORD}@localhost:{DB_PORT}/{DB_NAME}\"\n",
+    "study = optuna.load_study(storage=DB_URI, study_name=\"LightGBM_house_price\")\n",
+    "\n",
+    "\n",
+    "study.best_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_params = {\n",
+    "    \"objective\": \"regression\",\n",
+    "    \"metric\": \"rmse\",\n",
+    "    \"n_estimators\": 1000,\n",
+    "    \"verbosity\": -1,\n",
+    "    \"bagging_freq\": 1,\n",
+    "}\n",
+    "\n",
+    "lgb_model = lgbm.LGBMRegressor(**study.best_params, **other_params, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgbm_preds = fold_fit_score(\n",
+    "    lgb_model,\n",
+    "    X,\n",
+    "    y,\n",
+    "    X_test,\n",
+    "    15,\n",
+    "    transform_func=np.log1p,\n",
+    "    inverse_transform_func=np.expm1,\n",
+    "    plot_feat_imp=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_sub = pd.read_csv('../data/Sample_submission.csv')\n",
+    "print(sample_sub.shape)\n",
+    "\n",
+    "sample_sub[\"price\"] = np.mean(lgbm_preds, axis=0)\n",
+    "sample_sub.to_csv(\n",
+    "    \"lgbm_regressor_tuned_kfold_15_log_transformed_feat_eng_optuna.csv\", index=False\n",
+    ")\n",
+    "sample_sub.head()"
+   ]
   }
  ],
  "metadata": {
